fixup! Added flex-wrap to ACLModal, optimized this component for lower resolutions

--- a/src/components/ACLModal/ACLModal.styl
+++ b/src/components/ACLModal/ACLModal.styl
@@ -57,6 +57,8 @@
         button {
             flex: 0;
             flex-basis: 8rem;
+            display: block;
+            height: 3em;
         }
 
         div {
